@@ -92,6 +92,7 @@ Abbreviated Changelog from 2.3.5 Final
 - Changed colors a bit in my desktop to a less intense color.
 - Fixed so sublist tag now behaves as intended. You state a startIndex and how many elements you want.
 - Made errors (404 etc) in cms be directed to error page and not to the tool main action.
+- Added error check in ViewSystemUser action - thrown if encoding settings are wrong and one uses userNames with non-ascii-chars.
 
 -------------------------------------------------------------------------------------
 - InfoGlue 2.3.5 Final
